      any seed ids are found which don't have exactly 3 decimals (see #193).
    * Made sure that `SpatialCalculator` returns a meaningful error message if
      required columns are missing from DataFrame inputs (#197).
  - obsplus.EventBank
    * Added `overwrite_existing` keyword to `put_events` to disable squashing
      existing events if desired (#191).
    * Fixes issue with read inventory casting ints to datetime on pd 1.1.0
  - obsplus.events.pd
    * Made sure that the pre-defined extractors (`*_to_df`) still return all of
      the expected columns if there are no valid objects.

obsplus 0.1.1
  - obsplus.events
    * Fixed issue with validators flagging picks on stations with the same
      name but different networks (#173).
    * Added `subset` parameter to `get_seed_id_series` for selecting subsets
      of full seed id.
  - obsplus.EventBank
    * Fixed issue where path_structure was overriding a user-specified value
      of `""` (#178)
  - obsplus.structures.fetcher
    * fixed issue with Fetcher raising Pandas error when an inventory with
      duplicate chanenls was used (#183, #184).
  - obsplus.utils
    * Refactored df_to_inventory (#182).
    * Refactored compose_docstring and added function for printing dataframe
      columns and their expected dtypes (#182).
  - obsplus.WaveBank
    * Fixed issue where path_structure was overriding a user-specified value
      of `""` (#178)

obsplus 0.1.0:
  - obsplus.structures.fetcher
    * Fixed issue with `time_before` and `time_after` params in `Fetcher`
      (see #168).

obsplus 0.0.6:
  - obsplus.bank
    * Refactored logic for getting bank progress bars, now can use instances
      of obsplus.interfaces.ProgressBar to avoid counting files twice
      and for further customizability (see #106).
    * Removed min_file_for_bar argument in favor of class attribute of
      _min_files_for_bar (see #106).
    * Add support for circular searches on EventBank (see #110).